# prime-sieve-contest

./: .gitmodules  README.md
cpp-prime-sieve/: CMakeLists.txt
cpp-prime-sieve/main/: CMakeLists.txt  Main.cpp  PrimeSieve.cpp
cpp-prime-sieve/main/include/zhang/math/: PrimeSieve.h
cpp-prime-sieve/test/: CMakeLists.txt  Main.cpp  PrimeSieveTest.cpp
java-prime-sieve/: README.md  pom.xml
java-prime-sieve/src/main/java/com/zhang/math/prime/: CliParameterException.java  PrimeSieve.java  PrimeSieveCli.java  WarmupException.java
java-termux-prime-sieve/: README.md  build-android.sh  run-android.sh
java-termux-prime-sieve/src/main/java/com/zhang/math/prime/: CliParameterException.java  PrimeSieveCli.java  WarmupException.java
vb-prime-sieve/: find_prime_main.vb  find_primes.sln  find_primes.vbproj
vb-prime-sieve/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
